[project]
name = "centcom"
version = "1.0.0"
description = "Official CENTCOM Python SDK for requests and webhook verification"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Contro1", email = "dev@contro1.com" }]
keywords = ["centcom", "hitl", "human-in-the-loop", "webhook", "approval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://contro1.com"
Documentation = "https://contro1.com/docs"
Repository = "https://github.com/contro1-hq/centcom-langgraph"

[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"
